# Picture-Milvus-Admin

./: .env.example  .gitignore  README.md  __init__.py  docker-compose.yml  playwright.config.ts  pyproject.toml  项目计划书.md
apps/milvus-admin/: index.html  package-lock.json  package.json  vite.config.ts
apps/milvus-admin/src/: App.tsx
apps/milvus-admin/src/api/: milvusClient.ts
apps/milvus-admin/src/hooks/: useWebSocket.ts
apps/milvus-admin/src/pages/: Collections.tsx  DataCRUD.tsx  Gallery.tsx  Indexes.tsx  MaterialUpload.tsx  Partitions.tsx  Search.tsx  (+1 more)
demo/: __init__.py  clip_milvus_demo.py  inspect_milvus.py  upstream_simulator_demo.py  vlm_verify_test.py
scripts/: benchmark_milvus.py  cleanup_milvus.ps1  migrate_add_subject.py  rebuild_milvus_db.py  sync_partitions.py
src/: __init__.py  config.py  llm_utils.py  main.py  pipeline.py
src/api/: __init__.py  material_api.py  milvus_api.py  search_api.py  websocket_mgr.py
src/draw/: __init__.py  base.py  doubao.py  tongyi.py  utils.py
src/evaluate/: __init__.py  cached_clip_client.py  local_clip_client.py  vlm_evaluator.py  vlm_verifier.py
src/milvus/: __init__.py  education_parser.py  image_content_parser.py  milvus_optimization_plan.md  vector_store.py
src/models/: __init__.py  schemas.py
src/refiner/: __init__.py  llm_adjuster.py  pattern_library.py  prompt_refiner.py
src/storage/: __init__.py  record_store.py
tests/: test_draw.py  test_milvus.py  test_phase2.py  test_pipeline_integration.py
tests/e2e/milvus-admin/: collections.spec.ts  data-crud.spec.ts  partitions.spec.ts  search.spec.ts
