[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picture-optimizer"
version = "0.1.0"
description = "еӣҫеғҸз”ҹжҲҗдјҳеҢ–зі»з»ҹ вҖ” з”ҹеӣҫвҶ’иҜ„жөӢвҶ’Promptдҝ®жӯЈвҶ’еҗ‘йҮҸжЈҖзҙў й—ӯзҺҜ"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "open-clip-torch>=2.24.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "pymilvus>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
phase2 = [
    "pymilvus>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "demo*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
